== Version History ==

x.x (mm/dd/yyyy):

1.8 ():
  - new plugin setting to allow usage of au_widgets in pinboards
  - enforces plugin priority with regard to au_widgets
  - changed tense of search help text to 'you' instead of 'I'
  - changed pinboard search method from FTS to LIKE for forward compatibility with innodb
  - fixed invalid limit to results for pinned content in single pin selection modal
  - fixed poor grammar on single pin widget edit help text
  - added owner link and time created to single pin widget modal
  - fixed invalid entity icons for some entities in single pin widget modal

1.7 (03/07/2013):
  - adds in missing language string
  - fixes incorrect widget_layout permissions
  - remove public option from pinboard write access
  - adds better help text with mode-switch link
  - can no longer move/edit widgets in view mode (keeping a better contextual difference between view/edit)
  - smaller widget column headers with better help text
  - extra padding on widget columns in edit mode
  - fixes single pin widget modal positioning (used to be able to go off-screen to the left)
  - no longer overwrites the full widget view
  - added help text to single-pin widget modal when no content is pinned to a board
  - allows entities without an entity menu to be unpinned

1.6 (02/25/2013):
  - Fixes container edit permission for users granted edit permissions
  - limit deletion to set owners and admins (same as pages plugin behavior)
  - adds recent boards widget for profile/dashboard/groups
  - made 'pinboards' lowercase in group side menu to conform with other plugin standards
  - added additional help text for pinboard search
  - added additional help text for write permissions
  - adds link to view pinboard after pinning content

1.5 (02/11/2013):
 - Fixes hide widget style context issue
 - Fixes javascript conflict with embed forms

1.4 (02/08/2013):
 - Fixes additional issues with sets->pinboards conversion (Thanks RvR)